@@ -31,54 +31,37 @@ static inline bool transfer_fn_almost_equal(float a, float b) {
     return SkTAbs(a - b) < 0.001f;
 }
 
-static inline bool is_valid_transfer_fn(const skcms_TransferFunction& coeffs) {
-    if (SkScalarIsNaN(coeffs.a) || SkScalarIsNaN(coeffs.b) ||
-        SkScalarIsNaN(coeffs.c) || SkScalarIsNaN(coeffs.d) ||
-        SkScalarIsNaN(coeffs.e) || SkScalarIsNaN(coeffs.f) ||
-        SkScalarIsNaN(coeffs.g))
-    {
-        return false;
-    }
+// NOTE: All of this logic is copied from skcms.cc, and needs to be kept in sync.
 
-    if (coeffs.d < 0.0f) {
-        return false;
-    }
+// Most transfer functions we work with are sRGBish.
+// For exotic HDR transfer functions, we encode them using a tf.g that makes no sense,
+// and repurpose the other fields to hold the parameters of the HDR functions.
+enum TFKind { Bad_TF, sRGBish_TF, PQish_TF, HLGish_TF, HLGinvish_TF };
 
-    if (coeffs.d == 0.0f) {
-        // Y = (aX + b)^g + e  for always
-        if (0.0f == coeffs.a || 0.0f == coeffs.g) {
-            SkColorSpacePrintf("A or G is zero, constant transfer function "
-                               "is nonsense");
-            return false;
+static inline TFKind classify_transfer_fn(const skcms_TransferFunction& tf) {
+    if (tf.g < 0 && (int)tf.g == tf.g) {
+        // TODO: sanity checks for PQ/HLG like we do for sRGBish.
+        switch (-(int)tf.g) {
+            case PQish_TF:     return PQish_TF;
+            case HLGish_TF:    return HLGish_TF;
+            case HLGinvish_TF: return HLGinvish_TF;
         }
+        return Bad_TF;
     }
 
-    if (coeffs.d >= 1.0f) {
-        // Y = cX + f          for always
-        if (0.0f == coeffs.c) {
-            SkColorSpacePrintf("C is zero, constant transfer function is "
-                               "nonsense");
-            return false;
-        }
+    // Basic sanity checks for sRGBish transfer functions.
+    if (sk_float_isfinite(tf.a + tf.b + tf.c + tf.d + tf.e + tf.f + tf.g)
+            // a,c,d,g should be non-negative to make any sense.
+            && tf.a >= 0
+            && tf.c >= 0
+            && tf.d >= 0
+            && tf.g >= 0
+            // Raising a negative value to a fractional tf->g produces complex numbers.
+            && tf.a * tf.d + tf.b >= 0) {
+        return sRGBish_TF;
     }
 
-    if ((0.0f == coeffs.a || 0.0f == coeffs.g) && 0.0f == coeffs.c) {
-        SkColorSpacePrintf("A or G, and C are zero, constant transfer function "
-                           "is nonsense");
-        return false;
-    }
-
-    if (coeffs.c < 0.0f) {
-        SkColorSpacePrintf("Transfer function must be increasing");
-        return false;
-    }
-
-    if (coeffs.a < 0.0f || coeffs.g < 0.0f) {
-        SkColorSpacePrintf("Transfer function must be positive or increasing");
-        return false;
-    }
-
-    return true;
+    return Bad_TF;
 }
 
 static inline bool is_almost_srgb(const skcms_TransferFunction& coeffs) {
