@@ -72,7 +72,7 @@ bool SkHighContrast_Filter::onAppendStages(const SkStageRec& rec, bool shaderIsO
         // TODO: sRGB?
         *tf = {2,1, 0,0,0,0,0};
     }
-    p->append(SkRasterPipeline::parametric, tf);
+    p->append_transfer_function(*tf);
 
     if (fConfig.fGrayscale) {
         float r = SK_LUM_COEFF_R;
@@ -120,7 +120,7 @@ bool SkHighContrast_Filter::onAppendStages(const SkStageRec& rec, bool shaderIsO
         // See above... historically untagged == gamma 2 in this filter.
         *invTF ={0.5f,1, 0,0,0,0,0};
     }
-    p->append(SkRasterPipeline::parametric, invTF);
+    p->append_transfer_function(*invTF);
 
     if (!shaderIsOpaque) {
         p->append(SkRasterPipeline::premul);
