@@ -10,6 +10,8 @@ This file includes a list of high level updates for each milestone release.
 Milestone 79
 
 [Insert new notes here.]
+  * Added support for PQ and HLG transfer functions to SkColorSpace.
+
   * Added new api on GrContext ComputeImageSize. This replaces the hold static helper
     ComputeTextureSize.
 
